==================================================================================================
Changes for 2.9 
==================================================================================================
- Added capability to define engineering units, for both fast/slow channels, to be passed and to
  and recorded by DAQ system.
- Modified FiltCtrl.pm (Filter Module w/Control) such that is requires that all inputs be
  connected or build process will exit with error message.
- Modified DAC overrange reporting (Bug #722).
	- Removed ROLLING_OVERFLOWS compile option, which set EPICS record to report overrange per
	  second or accumulated overrange count.
	- Code now reports DAC overflows as both overrange/sec and accumulated overflows since last
	  overflow reset.
		- IFO:FEC-DCUID_DAC_OVERFLOW_DAC#_CHAN# = Overflows per second.
		- IFO:FEC-DCUID_DAC_OVERFLOW_ACC_DAC#_CHAN# = Accumulated overflow.
- Checking for Coeff and DAQ file changes, based on file CRC checking, has been moved out of the
  model sequencer code and into the model EPICS main.c program.
- As of SVN 3694, marked by this file submission to SVN, the reading of BURT files from the FE code
is supported. This is prodominantly handled by the src/epics/seq/main.c program.
Bug Fix - DacKillTimed and DacKillIOP parts: Parts ignored reset command while in fault mode,
  however, would remember the reset request and would reset as soon as fault cleared. This fix
  was also made to branch-2.8 prior to release V2.8.4.
- Bug #660 - Add daqd thread pid info to log files
- Bug #590 - Implement support for unsigned 32-bit integers for both fast and slow (EPICS) 
channels.  Added new RCG part, updated DAQ code and modified Dataviewer to handle new data type
- Added ADC timing diagnostic ie time between ADC rdy cycles. If errant, reported to stateword ADC
  bit. Current info also reported via /proc/modelname/status file. Note that this only affects IOP
  models.